--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Glob API URL
-VITE_GLOB_API_URL=http://localhost:3002
+VITE_GLOB_API_URL=https://chatgpt-web-production-2f4c.up.railway.app/api
 
 # Glob API Timeout (ms)
 VITE_GLOB_API_TIMEOUT=100000
